<resources>
    <string name="app_name">Kwiq Balance</string>
    <string name="kwiq_balance">KWIQ BALANCE</string>
    <string name="check_balance">Check Balance</string>

    <string name="admob_app_id">ca-app-pub-7844034431576864~9797716837</string>
    <string name="banner_home_footer">ca-app-pub-7844034431576864/3086100093</string>
    <string name="interstitialAd_id">ca-app-pub-7844034431576864/8745566985</string>


    <string name="last_check">Last Check:</string>
    <string name="data">Data:</string>
    <string name="message">Message:</string>
</resources>
